[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forge"
version = "0.1.0"
description = "I want just to help"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pyyaml>=6",
    "pydantic>=2",
]

[project.scripts]
forge = "forge.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["forge*"]